Image uploader and save images on firefox fixed. Also changed the thumbnails to use the new type 5 crop.

--- a/src/Elcodi/Admin/CoreBundle/Resources/public/css/objects/thumbnail/_thumbnail-first-principal.scss
+++ b/src/Elcodi/Admin/CoreBundle/Resources/public/css/objects/thumbnail/_thumbnail-first-principal.scss
@@ -1,9 +1,13 @@
 .thumbnail-group-extended {
 
 	& > li {
-		min-height: 100px;
 		min-width: 150px;
 		background: $color-box-dark;
+	}
+
+	.thumbnail {
+		vertical-align: middle;
+		background: $color-background;
 	}
 
 	li:first-child .thumbnail {
